# ChangeLog for sci-astronomy/pyAstroStack
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pyAstroStack-0.3.0 (11 Apr 2014)

  11 Apr 2014; Mikko Laine <mikko.laine@gmail.com> +metadata.xml,
  +pyAstroStack-0.3.0.ebuild:
  sci-overlay/sci: Added an ebuild for pyAstroStack