@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Apr 2014; Mikko Laine <mikko.laine@gmail.com> pyAstroStack-0.3.0.ebuild:
+  sci-overlay/sci: Added few missing PYTHON_DEPENDS
+
 *pyAstroStack-0.3.0 (11 Apr 2014)
 
   11 Apr 2014; Mikko Laine <mikko.laine@gmail.com> +metadata.xml,
